--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
         <h1 class="title">Binary Clock</h1>
         <h3 class="subtitle">Made in pure HTML, CSS and vanilla Javascript</h3>
     </header>
-    <div class="wrapper">
-        
+    <div class="wrapper cf">
+        <i class="hours left"></i>
+        <ul class="hours right">
+            <li class="h1"></li>
+            <li class="h2"></li>
+            <li class="h3"></li>
+            <li class="h4"></li>
+            <li class="h5"></li>
+            <li class="h6"></li>
+        </ul>
+        <i class="minutes left"></i>
+        <ul class="minutes right">
+            <li class="m1"></li>
+            <li class="m2"></li>
+            <li class="m3"></li>
+            <li class="m4"></li>
+            <li class="m5"></li>
+            <li class="m6"></li>
+        </ul>
     </div>
     <footer class="footer">
         
