--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h3 class="subtitle">Made in pure HTML, CSS and vanilla Javascript</h3>
     </header>
     <div class="wrapper cf">
-        <i class="hours left"></i>
-        <ul class="hours right">
+        <i class="h left"></i>
+        <ul class="tul hours right">
             <li class="h1"></li>
             <li class="h2"></li>
             <li class="h3"></li>
@@ -20,8 +20,8 @@
             <li class="h5"></li>
             <li class="h6"></li>
         </ul>
-        <i class="minutes left"></i>
-        <ul class="minutes right">
+        <i class="m left"></i>
+        <ul class="tul minutes right">
             <li class="m1"></li>
             <li class="m2"></li>
             <li class="m3"></li>
