--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h3 class="subtitle">Made in pure HTML, CSS and vanilla Javascript</h3>
     </header>
     <div class="wrapper cf">
-        <i class="h left"></i>
+        <i class="i h left"></i>
         <ul class="tul hours right">
             <li class="h1"></li>
             <li class="h2"></li>
@@ -20,7 +20,7 @@
             <li class="h5"></li>
             <li class="h6"></li>
         </ul>
-        <i class="m left"></i>
+        <i class="i m left"></i>
         <ul class="tul minutes right">
             <li class="m1"></li>
             <li class="m2"></li>
