--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <h1 class="title">Binary Clock</h1>
         <h3 class="subtitle">Made in pure HTML, CSS and vanilla Javascript</h3>
     </header>
-    <div class="wrapper cf">
-        <i class="i h left"></i>
-        <ul class="tul hours right">
+    <div class="wrapper">
+        <ul class="tul hours">
+            <li class="ind">H</li>
             <li class="h1"></li>
             <li class="h2"></li>
             <li class="h3"></li>
@@ -21,7 +21,8 @@
             <li class="h6"></li>
         </ul>
         <i class="i m left"></i>
-        <ul class="tul minutes right">
+        <ul class="tul minutes">
+            <li class="ind">M</li>
             <li class="m1"></li>
             <li class="m2"></li>
             <li class="m3"></li>
