--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
             <li class="m5"></li>
             <li class="m6"></li>
         </ul>
+        <ul class="tul seconds">
+            <li class="ind">S</li>
+            <li class="m1"></li>
+            <li class="m2"></li>
+            <li class="m3"></li>
+            <li class="m4"></li>
+            <li class="m5"></li>
+            <li class="m6"></li>
+        </ul>
     </div>
     <footer class="footer">
         
