--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         </ul>
         <ul class="tul seconds">
             <li class="ind">S</li>
-            <li class="m1"></li>
-            <li class="m2"></li>
-            <li class="m3"></li>
-            <li class="m4"></li>
-            <li class="m5"></li>
-            <li class="m6"></li>
+            <li class="s1"></li>
+            <li class="s2"></li>
+            <li class="s3"></li>
+            <li class="s4"></li>
+            <li class="s5"></li>
+            <li class="s6"></li>
         </ul>
     </div>
     <footer class="footer">
