--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
         </ul>
     </div>
     <footer class="footer">
-        
+        <p>Created by Leonardo Riether</p>
+        <p>Github: <a href="https://github.com/LeoRiether">@leoriether</a></p>
+        <p><a href="https://github.com/LeoRiether/binaryclock">This project on github</a></p>
+        <p>Email: leonardoalves8217@gmail.com</p>
+        <p>Thank you for your appreciation</p>
     </footer>
 
     <script src="clock.js"></script>
