--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta viewport="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="app.min.css">
     <title>Binary Clock</title>
 </head>
 <body>
@@ -48,6 +48,6 @@
         <p>Thank you for your appreciation</p>
     </footer>
 
-    <script src="clock.js"></script>
+    <script src="clock.min.js"></script>
 </body>
 </html>
